--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,22 @@ cmake_minimum_required(VERSION 3.10)
 project(sresult CXX)
 
 if(MSVC)
-    add_compile_options(/source-charset:utf-8 /execution-charset:.932 /std:c++17)
+    # vs2022用(c++17)
+    add_compile_options(/source-charset:utf-8 /execution-charset:.932 /Zc:__cplusplus /std:c++17)
+    # vs2022用(c++23)
+    # add_compile_options(/source-charset:utf-8 /execution-charset:.932 /Zc:__cplusplus /std:c++23preview)
 else()
+    # gcc用(c++17)
     add_compile_options(-fexec-charset=cp932 -std=c++17)
-    # clang用
+    # gcc用(c++23)
+    # add_compile_options(-fexec-charset=cp932 -std=c++23)
+    # clang用(c++17)
     # add_compile_options(-std=c++17)
+    # clang用(c++23)
+    # add_compile_options(-std=c++23)
     add_link_options(-static)
 endif()
+
 
 add_executable(railway_lambda               railway_lambda.cpp)
 add_executable(railway_function             railway_function.cpp)
