cmakeにちゃんとC++23指定オプションを作ったり、環境分岐を少しちゃんと書いた。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,39 @@
 cmake_minimum_required(VERSION 3.10)
 project(sresult CXX)
 
-if(MSVC)
-    # vs2022用(c++17)
-    add_compile_options(/source-charset:utf-8 /execution-charset:.932 /Zc:__cplusplus /std:c++17)
-    # vs2022用(c++23)
-    # add_compile_options(/source-charset:utf-8 /execution-charset:.932 /Zc:__cplusplus /std:c++23preview)
+option(USE_CPP23 "Build with C++23 standard" OFF)
+
+if(USE_CPP23)
+    if(MSVC)
+        if(MSVC_VERSION GREATER_EQUAL 1950)
+            add_compile_options(/std:c++23)
+        else()
+            add_compile_options(/std:c++23preview)
+        endif()
+    else()
+        add_compile_options(-std=c++23)
+    endif()
 else()
-    # gcc用(c++17)
-    add_compile_options(-fexec-charset=cp932 -std=c++17)
-    # gcc用(c++23)
-    # add_compile_options(-fexec-charset=cp932 -std=c++23)
-    # clang用(c++17)
-    # add_compile_options(-std=c++17)
-    # clang用(c++23)
-    # add_compile_options(-std=c++23)
-    add_link_options(-static)
+    if(MSVC)
+        add_compile_options(/std:c++17)
+    else()
+        add_compile_options(-std=c++17)
+    endif()
 endif()
 
+if(WIN32)
+    if(MSVC)
+        add_compile_options(/source-charset:utf-8 /execution-charset:.932 /Zc:__cplusplus)
+    else()
+        add_link_options(-static)
+        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+            # clangはUTF-8固定なので指定したくても出来ない
+            add_compile_options(-fexec-charset=cp932)
+        endif()
+    endif()
+endif()
 
-add_executable(railway_lambda               railway_lambda.cpp)
-add_executable(railway_function             railway_function.cpp)
-add_executable(no_railway_exception         no_railway_exception.cpp)
-add_executable(railway_lambda_with_myvector railway_lambda_with_myvector.cpp)
-add_executable(railway_lambda_bench         railway_lambda_bench.cpp)
+set(TARGETS railway_lambda railway_function no_railway_exception railway_lambda_with_myvector railway_lambda_bench)
+foreach(target ${TARGETS})
+    add_executable(${target} ${target}.cpp)
+endforeach()
